@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menuItemClearPowerCurrent"
-        android:title="@string/menuItemClearPowerCurrent">
+        android:id="@+id/menuItemClearAllPowerCurrent"
+        android:title="@string/menuItemClearAllPowerCurrent">
     </item>
 
 </menu>
